<resources>
    <string name="app_name">Thumper</string>
    <string name="title_neopixel">NeoPixel</string>
    <string name="title_control">Control</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_title_color_control">Color Control</string>
    <string name="pref_title_strobe_control">Strobe Control</string>
    <string name="pref_color_red">Red</string>
    <string name="pref_color_green">Green</string>
    <string name="pref_color_blue">Blue</string>
    <string name="pref_strobe">Strobe</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_settings">Settings</string>
    <string name="pref_title_strobe">Strobe Control</string>
    <string name="pref_label_delay">Delay</string>
    <string name="pref_label_delay_ms">0 ms</string>
    <string name="pref_title_sw_strobe_on_off">Off/On</string>
    <string name="pref_label_sw_strobe_toggle">Toggle Off/On</string>
    <string name="pref_nav_settings">Settings</string>
    <string name="title_nav_settings">Settings</string>
    <string name="pref_title_nodejs">NodeJS Server</string>
    <string name="pref_title_ip">IP</string>
    <string name="pref_title_port">PORT</string>
    <string name="btn_text_alarm_on">Alarm On</string>
    <string name="btn_text_alarm_off">Alarm Off</string>
    <string name="string_stop_driving">STOP</string>
</resources>
