<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_neopixel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jansen.sander.thumper.fragments.NeoPixelFragment"
    tools:layout_editor_absoluteY="81dp">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtColorControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pref_title_color_control"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/pref_color_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtColorControl" />

        <TextView
            android:id="@+id/txtGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/pref_color_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRed" />

        <TextView
            android:id="@+id/txtBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/pref_color_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGreen" />

        <SeekBar
            android:id="@+id/seekBarRed"
            android:layout_width="290dp"
            android:layout_height="21dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:max="255"
            android:progressBackgroundTint="@android:color/holo_red_dark"
            android:progressTint="@android:color/holo_red_dark"
            android:thumbTint="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtGreen"
            app:layout_constraintTop_toBottomOf="@+id/txtColorControl" />

        <SeekBar
            android:id="@+id/seekBarGreen"
            android:layout_width="290dp"
            android:layout_height="21dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:max="255"
            android:progressBackgroundTint="@android:color/holo_green_dark"
            android:progressTint="@android:color/holo_green_dark"
            android:thumbTint="@android:color/holo_green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toEndOf="@+id/txtGreen"
            app:layout_constraintTop_toBottomOf="@+id/seekBarRed" />

        <SeekBar
            android:id="@+id/seekBarBlue"
            android:layout_width="290dp"
            android:layout_height="21dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:max="255"
            android:progressBackgroundTint="@android:color/holo_blue_dark"
            android:progressTint="@android:color/holo_blue_dark"
            android:thumbTint="@android:color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toEndOf="@+id/txtGreen"
            app:layout_constraintTop_toBottomOf="@+id/seekBarGreen" />

        <TextView
            android:id="@+id/txtStrobeControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/pref_title_strobe_control"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtColorControl"
            app:layout_constraintTop_toBottomOf="@+id/txtBlue" />

        <TextView
            android:id="@+id/txtLabelDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/pref_label_delay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStrobeControl" />

        <SeekBar
            android:id="@+id/seekBarDelay"
            android:layout_width="240dp"
            android:layout_height="17dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:max="245"
            app:layout_constraintStart_toEndOf="@+id/txtLabelDelay"
            app:layout_constraintTop_toBottomOf="@+id/txtStrobeControl" />

        <TextView
            android:id="@+id/txtLabelMs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pref_label_delay_ms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seekBarDelay"
            app:layout_constraintTop_toBottomOf="@+id/txtStrobeControl" />

        <Switch
            android:id="@+id/swOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/pref_title_sw_strobe_on_off"
            app:layout_constraintBottom_toTopOf="@+id/seekBarDelay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtStrobeControl"
            app:layout_constraintTop_toBottomOf="@+id/txtBlue" />

        <Switch
            android:id="@+id/swRGB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtColorControl"
            tools:layout_editor_absoluteY="9dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
